Demo3/Demo4 for Stage capital

--- a/POS/SharedApp/Controls/listView/knockout.listView.html
+++ b/POS/SharedApp/Controls/listView/knockout.listView.html
@@ -11,61 +11,64 @@
     </script>
 
     <!-- Binding template for the CartPage transaction grid header row. -->
-    <script type="text/html" id="cartTransactionGridHeaderTemplate">
-        <div class="tillLayout-ProductNameField">
-            <h6 data-bind="resx: { textContent: 'string_110' }"></h6>
-        </div>
-        <div class="tillLayout-QuantityField textRight">
-            <h6 data-bind="resx: { textContent: 'string_111' }"></h6>
-        </div>
-        <div class="tillLayout-BarcodeIdField">
-            <h6 data-bind="resx: { textContent: 'string_4431' }"></h6>
-        </div>
-        <div class="tillLayout-BlockedField">
-            <h6 data-bind="resx: { textContent: 'string_4432' }"></h6>
-        </div>
-        <div class="tillLayout-SizeField">
-            <h6 data-bind="resx: { textContent: 'string_4433' }"></h6>
-        </div>
-        <div class="tillLayout-ColorField">
-            <h6 data-bind="resx: { textContent: 'string_4434' }"></h6>
-        </div>
-        <div class="tillLayout-StyleField">
-            <h6 data-bind="resx: { textContent: 'string_4435' }"></h6>
-        </div>
-        <div class="tillLayout-ConfigurationField">
-            <h6 data-bind="resx: { textContent: 'string_4436' }"></h6>
-        </div>
-        <div class="tillLayout-InfocodeProductField">
-            <h6 data-bind="resx: { textContent: 'string_4437' }"></h6>
-        </div>
-        <div class="tillLayout-LinkedProductField">
-            <h6 data-bind="resx: { textContent: 'string_4438' }"></h6>
-        </div>
-        <div class="tillLayout-OriginalPriceField textRight">
-            <h6 data-bind="resx: { textContent: 'string_4439' }"></h6>
-        </div>
-        <div class="tillLayout-TaxAmountField textRight">
-            <h6 data-bind="resx: { textContent: 'string_4440' }"></h6>
-        </div>
-        <div class="tillLayout-TaxCodeField">
-            <h6 data-bind="resx: { textContent: 'string_4441' }"></h6>
-        </div>
-        <div class="tillLayout-TaxPercentageField textRight">
-            <h6 data-bind="resx: { textContent: 'string_4442' }"></h6>
-        </div>
-        <div class="tillLayout-TotalWithTaxField textRight">
-            <h6 data-bind="resx: { textContent: 'string_4443' }"></h6>
-        </div>
-        <div class="tillLayout-TotalWithoutTaxField textRight">
-            <h6 data-bind="resx: { textContent: 'string_4444' }"></h6>
-        </div>
-        <div class="tillLayout-UnitOfMeasureField">
-            <h6 data-bind="resx: { textContent: 'string_4445' }"></h6>
-        </div>
-        <div class="tillLayout-ItemIdField">
-            <h6 data-bind="resx: { textContent: 'string_4446' }"></h6>
-        </div>
+<script type="text/html" id="cartTransactionGridHeaderTemplate">
+    <div class="tillLayout-ProductNameField">
+        <h6 data-bind="resx: { textContent: 'string_110' }"></h6>
+    </div>
+    <div class="tillLayout-QuantityField textRight">
+        <h6 data-bind="resx: { textContent: 'string_111' }"></h6>
+    </div>
+    <div class="tillLayout-BarcodeIdField">
+        <h6 data-bind="resx: { textContent: 'string_4431' }"></h6>
+    </div>
+    <div class="tillLayout-BlockedField">
+        <h6 data-bind="resx: { textContent: 'string_4432' }"></h6>
+    </div>
+    <div class="tillLayout-SizeField">
+        <h6 data-bind="resx: { textContent: 'string_4433' }"></h6>
+    </div>
+    <div class="tillLayout-ColorField">
+        <h6 data-bind="resx: { textContent: 'string_4434' }"></h6>
+    </div>
+    <div class="tillLayout-StyleField">
+        <h6 data-bind="resx: { textContent: 'string_4435' }"></h6>
+    </div>
+    <div class="tillLayout-ConfigurationField">
+        <h6 data-bind="resx: { textContent: 'string_4436' }"></h6>
+    </div>
+    <div class="tillLayout-InfocodeProductField">
+        <h6 data-bind="resx: { textContent: 'string_4437' }"></h6>
+    </div>
+    <div class="tillLayout-LinkedProductField">
+        <h6 data-bind="resx: { textContent: 'string_4438' }"></h6>
+    </div>
+    <div class="tillLayout-OriginalPriceField textRight">
+        <h6 data-bind="resx: { textContent: 'string_4439' }"></h6>
+    </div>
+    <div class="tillLayout-TaxAmountField textRight">
+        <h6 data-bind="resx: { textContent: 'string_4440' }"></h6>
+    </div>
+    <div class="tillLayout-TaxCodeField">
+        <h6 data-bind="resx: { textContent: 'string_4441' }"></h6>
+    </div>
+    <div class="tillLayout-TaxPercentageField textRight">
+        <h6 data-bind="resx: { textContent: 'string_4442' }"></h6>
+    </div>
+    <div class="tillLayout-TotalWithTaxField textRight">
+        <h6 data-bind="resx: { textContent: 'string_4443' }"></h6>
+    </div>
+    <div class="tillLayout-TotalWithoutTaxField textRight">
+        <h6 data-bind="resx: { textContent: 'string_4444' }"></h6>
+    </div>
+    <div class="tillLayout-UnitOfMeasureField">
+        <h6 data-bind="resx: { textContent: 'string_4445' }"></h6>
+    </div>
+    <div class="tillLayout-ItemIdField">
+        <h6 data-bind="resx: { textContent: 'string_4446' }"></h6>
+    </div>
+    <div class="tillLayout-TotalWithoutTaxField textRight"> <!--TODO:AM-->
+        <h6>Original Amount</h6>
+    </div>
     </script>
 
     <!-- Binding template for the CartPage delivery grid header row. -->
@@ -94,61 +97,64 @@
     </script>
 
     <!-- Binding template for CartPage transaction grid row. -->
-    <script type="text/html" id="cartTransactionGridRowTemplate">
-        <div class="tillLayout-ProductNameField">
-            <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Core.Converter.ProductNameFormatter', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-QuantityField textRight">
-            <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Core.Converter.CartLineQuantityFormat', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-BarcodeIdField">
-            <h5 data-bind="textConverter: { data: dataRow, field: 'Barcode', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-BlockedField">
-            <h5 data-bind="textConverter: { data: dataRow, field: 'IsBlocked', converter: 'Commerce.Core.Converter.BooleanFormatter', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-SizeField">
-            <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Core.Converter.SizeNameFormatter', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-ColorField">
-            <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Core.Converter.ColorNameFormatter', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-StyleField">
-            <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Core.Converter.StyleNameFormatter', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-ConfigurationField">
-            <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Core.Converter.ConfigurationNameFormatter' , defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-InfocodeProductField">
-            <h5 data-bind="textConverter: { data: dataRow, field: 'InfocodeItem', converter: 'Commerce.Core.Converter.BooleanFormatter', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-LinkedProductField">
-            <h5 data-bind="textConverter: { data: dataRow, field: 'IsLinkedItem', converter: 'Commerce.Core.Converter.BooleanFormatter', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-OriginalPriceField textRight">
-            <h5 data-bind="textConverter: { data: dataRow, field: 'OriginalPrice', defaultValue: '0', converter: 'Commerce.Core.Converter.PriceFormatter', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-TaxAmountField textRight">
-            <h5 data-bind="textConverter: { data: dataRow, field: 'TaxAmount', converter: 'Commerce.Core.Converter.PriceFormatter', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-TaxCodeField">
-            <h5 data-bind="textConverter: { data: dataRow, field: 'ItemTaxGroupId', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-TaxPercentageField textRight">
-            <h5 data-bind="textConverter: { data: dataRow, field: 'TaxRatePercent', converter: 'Commerce.Core.Converter.DecimalFormatter', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-TotalWithTaxField textRight">
-            <h5 data-bind="textConverter: { data: dataRow, field: 'TotalAmount', converter: 'Commerce.Core.Converter.PriceFormatter', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-TotalWithoutTaxField textRight">
-            <h5 data-bind="textConverter: { data: dataRow, field: 'NetAmountWithoutTax', converter: 'Commerce.Core.Converter.PriceFormatter', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-UnitOfMeasureField">
-            <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Formatters.CartLineUnitOfMeasureFormat', defaultValue: '', type: 'text' }"></h5>
-        </div>
-        <div class="tillLayout-ItemIdField">
-            <h5 data-bind="textConverter: { data: dataRow, field: 'ItemId', defaultValue: '', type: 'text' }"></h5>
-        </div>
+<script type="text/html" id="cartTransactionGridRowTemplate">
+    <div class="tillLayout-ProductNameField">
+        <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Core.Converter.ProductNameFormatter', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-QuantityField textRight">
+        <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Core.Converter.CartLineQuantityFormat', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-BarcodeIdField">
+        <h5 data-bind="textConverter: { data: dataRow, field: 'Barcode', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-BlockedField">
+        <h5 data-bind="textConverter: { data: dataRow, field: 'IsBlocked', converter: 'Commerce.Core.Converter.BooleanFormatter', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-SizeField">
+        <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Core.Converter.SizeNameFormatter', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-ColorField">
+        <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Core.Converter.ColorNameFormatter', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-StyleField">
+        <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Core.Converter.StyleNameFormatter', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-ConfigurationField">
+        <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Core.Converter.ConfigurationNameFormatter' , defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-InfocodeProductField">
+        <h5 data-bind="textConverter: { data: dataRow, field: 'InfocodeItem', converter: 'Commerce.Core.Converter.BooleanFormatter', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-LinkedProductField">
+        <h5 data-bind="textConverter: { data: dataRow, field: 'IsLinkedItem', converter: 'Commerce.Core.Converter.BooleanFormatter', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-OriginalPriceField textRight">
+        <h5 data-bind="textConverter: { data: dataRow, field: 'OriginalPrice', defaultValue: '0', converter: 'Commerce.Core.Converter.PriceFormatter', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-TaxAmountField textRight">
+        <h5 data-bind="textConverter: { data: dataRow, field: 'TaxAmount', converter: 'Commerce.Core.Converter.PriceFormatter', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-TaxCodeField">
+        <h5 data-bind="textConverter: { data: dataRow, field: 'ItemTaxGroupId', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-TaxPercentageField textRight">
+        <h5 data-bind="textConverter: { data: dataRow, field: 'TaxRatePercent', converter: 'Commerce.Core.Converter.DecimalFormatter', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-TotalWithTaxField textRight">
+        <h5 data-bind="textConverter: { data: dataRow, field: 'TotalAmount', converter: 'Commerce.Core.Converter.PriceFormatter', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-TotalWithoutTaxField textRight">
+        <h5 data-bind="textConverter: { data: dataRow, field: 'NetAmountWithoutTax', converter: 'Commerce.Core.Converter.PriceFormatter', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-UnitOfMeasureField">
+        <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Formatters.CartLineUnitOfMeasureFormat', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-ItemIdField">
+        <h5 data-bind="textConverter: { data: dataRow, field: 'ItemId', defaultValue: '', type: 'text' }"></h5>
+    </div>
+    <div class="tillLayout-TotalWithoutTaxField textRight"> <!--TODO:AM DEMO4-->
+        <h5 data-bind="textConverter: { data: dataRow, field: '$data', converter: 'Commerce.Formatters.CartLineCustomField', defaultValue: '', type: 'text' }"></h5>
+    </div>
     </script>
 
     <!-- Binding template for CartPage delivery grid row. -->
